[gd_scene load_steps=8 format=2]

[ext_resource path="res://Bau2.gd" type="Script" id=1]
[ext_resource path="res://chest.png" type="Texture" id=2]
[ext_resource path="res://coin.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "abrir"
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 28, 84, 336, 344 ), Rect2( 365, 84, 336, 344 ), Rect2( 730, 84, 336, 344 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fechado"
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 32, 84, 336, 344 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 153.551, 136.448 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 0, -50, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 2.0

[node name="Bau" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 530.614, 295.598 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 84, 336, 344 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/abrir = SubResource( 1 )
anims/fechado = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 530.637, 258.077 )
emitting = false
amount = 5
lifetime = 2.0
one_shot = true
explosiveness = 0.5
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="input_event" from="Sprite/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
